完成页面 	1.我的 	2.资料修改

--- a/trunk/apps/index.html
+++ b/trunk/apps/index.html
@@ -8,7 +8,9 @@
 	<link href="www/mine/css/font.css" rel="stylesheet" type="text/css" />
 	
 	<script src="www/mine/js/jquery.min.js"></script>
+	<script src="www/lib/jquery/jquery.form.js"></script>
 	<script src="www/lib/angular/angular.min.js"></script>
+	
 	<script src="www/lib/angular/angular-cookies.min.js"></script>
 	<script src="www/lib/angular-ui/angular-ui-router.min.js"></script>
 	
