--- a/trunk/apps/www/index.html
+++ b/trunk/apps/www/index.html
@@ -23,7 +23,7 @@
 	<script src="cordova.js"></script>
 </head>
 <body>
-<ion-nav-bar class="bar-dark">
+<ion-nav-bar class="bar-stable">
 	<ion-nav-back-button class="button-clear"> 返回 </ion-nav-back-button>
 </ion-nav-bar>
 <ion-nav-view></ion-nav-view>
